requirements and minor updates

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -40,7 +40,7 @@
 	header-img start 
 	============================== -->
     <section id="hero-area">
-      <img class="img-responsive" src='media/{{ picture.header }}' alt="">
+      <img class="img-responsive" style = 'width:1263px; height: 459.8px' src='media/{{ picture.header }}' alt="">
     </section>
 	<!--
 
@@ -99,7 +99,7 @@
                         <div id="owl-example" class="owl-carousel">
                             {% for feature in features %}
                                 <div>
-                                    <img class="img-responsive" src="media/{{ feature.image }}" alt="">
+                                    <img class="img-responsive"  style = 'width:265px; height: 237.31px' src="media/{{ feature.image }}" alt="">
                                 </div>
                             {% endfor %}
                         </div>
@@ -121,7 +121,11 @@
                         <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" style = 'height: 150px; border-radius: 50%' src="media/{{picture.chef}}" alt="Patience Ajimuda">
                         <h1 class="heading wow fadeInUp" data-wow-duration="400ms" data-wow-delay="500ms" >About <span>Me</span> 
                         </h1>
-                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">I AM AJIMUDA PATIENCE</p>
+                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">I am <strong>Patience Aanuoluwapo Ajimuda</strong>, a final year student of Obafemi Awolowo University studying English Education, I am an educationist and also a passionate entrepreneur.<br>
+                        I have goals targeted at changing the feminine world as regarding gender inequality and child education. I currently volunteer in an NGO where we are passionate about developing children, raising children and supporting those who needs help in financing their education.<br>
+                        I am a lover of Christ and His body. I aim to become a writer as the years go by thereby influencing the minds of young men and women positively. I am a member of All Nigerian United Nations Student Association (ANUNSA).
+                        I have passion for cooking and anything that has to do with the kitchen and the table. I love making new recipes and trying new cooking ideas. Cooking is just a part of me.
+                        </p>
                     </div>
                 </div><!-- .col-md-12 close -->
             </div><!-- .row close -->
@@ -142,7 +146,7 @@
                             {% for blog in blogs %}
                                 <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
                                     <div class="blog-img">
-                                        <img src="media\{{ blog.image }}" alt="{{ blog.title }}">
+                                        <img style = 'width:293px; height: 220px' src="media\{{ blog.image }}" alt="{{ blog.title }}">
                                     </div>
                                     <div class="content-right">
                                         <h3>{{ blog.title }}</h3>
@@ -270,7 +274,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="block">
-                        <p> &copy; 2020 - <a href = "http://sirdesmond.pythonanywhere.com" target = '_blank'>Desmond Nnebue </a>08038459141</p> 
+                        <p> &copy; 2020 - <a href = "https://sirdesmond.pythonanywhere.com" target = '_blank'>Desmond Nnebue </a>08038459141</p> 
                         <p>Template by &copy; 2014 - All Rights Reserved. <a href="http://www.themefisher.com" target = '_blank'>Themefisher</a></p>
                     </div>
                 </div>
