--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -40,7 +40,7 @@
 	header-img start 
 	============================== -->
     <section id="hero-area">
-      <img class="img-responsive" style = 'width:1263px; height: 459.8px' src='media/{{ picture.header }}' alt="">
+      <img class="img-responsive" style = 'width:1263px; height: 459.8px' src='{{picture.header.url}}' alt="">
     </section>
 	<!--
 
@@ -62,7 +62,7 @@
                                 <span class="icon-bar"></span>
                               </button>
                                   <a class="navbar-brand" href="#about-us">
-                                    <img src="media/{{ picture.logo }}" alt="Logo">
+                                    <img src="{{ picture.logo.url }}" alt="Logo">
                                   </a>
 
                             </div>
@@ -99,7 +99,7 @@
                         <div id="owl-example" class="owl-carousel">
                             {% for feature in features %}
                                 <div>
-                                    <img class="img-responsive"  style = 'width:265px; height: 237.31px' src="media/{{ feature.image }}" alt="">
+                                    <img class="img-responsive"  style = 'width:265px; height: 237.31px' src="{{ feature.image.url }}" alt="">
                                 </div>
                             {% endfor %}
                         </div>
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="block">
-                        <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" style = 'height: 150px; border-radius: 50%' src="media/{{picture.chef}}" alt="Patience Ajimuda">
+                        <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" style = 'height: 150px; border-radius: 50%' src="{{picture.chef.url }}" alt="Patience Ajimuda">
                         <h1 class="heading wow fadeInUp" data-wow-duration="400ms" data-wow-delay="500ms" >About <span>Me</span> 
                         </h1>
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">I am <strong>Patience Aanuoluwapo Ajimuda</strong>, a final year student of Obafemi Awolowo University studying English Education, I am an educationist and also a passionate entrepreneur.<br>
@@ -146,7 +146,7 @@
                             {% for blog in blogs %}
                                 <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
                                     <div class="blog-img">
-                                        <img style = 'width:293px; height: 220px' src="media\{{ blog.image }}" alt="{{ blog.title }}">
+                                        <img style = 'width:293px; height: 220px' src="{{ blog.image.url }}" alt="{{ blog.title }}">
                                     </div>
                                     <div class="content-right">
                                         <h3>{{ blog.title }}</h3>
